# AI-Document-Analyzer

./: .gitignore
backend/: chat_logic.py  document_processor.py  main.py  pyproject.toml  requirements.txt  test.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx
